--- a/04_01_lists/page.html
+++ b/04_01_lists/page.html
@@ -17,9 +17,11 @@
 - Email: healthyboy88@email.com
 - Address: 79 Ayer Rajah Crescent 
 -->
-
-
-
+	<ul>
+		<li>Phone: 123456789</li>
+		<li>Email: healthyboy88@email.com</li>
+		<li>Address: 79 Ayer Rajah Crescent</li>
+	</ul>
 
 
 
@@ -29,7 +31,13 @@
 - fa-envelope
 - fa-home 
 -->
-
+	
+	<ul class="fa-ul">
+		<li><i class="fa-li fa fa-phone"></i>123456789</li>
+		<li><i class="fa-li fa fa-envelope"></i>healthyboy88@email.com</li>
+		<li><i class="fa-li fa fa-home"></i>79 Ayer Rajah Crescent</li>	
+		<li><a class="fa-li fa fa-phone"></a></li><!-- for testing purpose -->
+	</ul>
 
 
 
