--- a/08_01_form/page.html
+++ b/08_01_form/page.html
@@ -23,7 +23,13 @@
 4. username and email should have accompanying labels
 5. each label+input pair is wrapped in a <div> 
 -->
+<form action="https://coderinyou-1332.appspot.com/submit" method="POST">
+	<input type="text" name="myText" placeholder="name" value="frank lee" required>
+	
 
+
+	<input type="submit" value="sign up">
+</form>
 
 
 
