--- a/06_01_images/page.html
+++ b/06_01_images/page.html
@@ -8,6 +8,7 @@
 	<style type="text/css">
 		body{background-color: gray;}
 	</style>
+	<link rel="stylesheet" href="page.css">
 </head>
 <body>
 <h1>I schooled at</h1>
@@ -17,7 +18,7 @@ create an image where
 the file source is: http://stackup.sg/assets/stackup_logo.svg
 the alternate text is: "logo" 
 -->
-
+<img src="https://www.iss.nus.edu.sg/images/default-source/default-album/stackup.jpg?sfvrsn=2&MaxWidth=500&MaxHeight=&ScaleUp=false&Quality=High&Method=ResizeFitToAreaArguments&Signature=742A94D9AD3BF61281BEEFD787A6F5523B8E6273" alt="image">
 
 
 </body>
