--- a/08_01_form/page.html
+++ b/08_01_form/page.html
@@ -8,46 +8,28 @@
 </head>
 <body>
 
-<!-- 
-1. create a form that posts to: https://coderinyou-1332.appspot.com/submit
-2. The form should have the 3 inputs:
-	-	username (text)
-	-	(email)
-	-	(submit) button
-3. input should handle the following attributes:
-	-	id: for linking to label
-	-	type: what kind of input?
-	-	name: the key name (reflected in the receiving server)
-	-	placeholder: helper text when empty
-	-	required: cannot send form if empty
-4. username and email should have accompanying labels
-5. each label+input pair is wrapped in a <div> 
--->
-<form action="https://coderinyou-1332.appspot.com/submit" method="POST">
-	<input type="text" name="myText" placeholder="name" value="frank lee" required>
-	
-
-
-	<input type="submit" value="sign up">
-</form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	<!-- 
+	1. create a form that posts to: https://coderinyou-1332.appspot.com/submit
+	2. The form should have the 3 inputs:
+		-	username (text)
+		-	(email)
+		-	(submit) button
+	3. input should handle the following attributes:
+		-	id: for linking to label
+		-	type: what kind of input?
+		-	name: the key name (reflected in the receiving server)
+		-	placeholder: helper text when empty
+		-	required: cannot send form if empty
+	4. username and email should have accompanying labels
+	5. each label+input pair is wrapped in a <div> 
+	-->
+	<form action="https://coderinyou-1332.appspot.com/submit" method="POST">
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="frank lee" required><br>
+		<label for="email">Email</label>
+		<input type="text" id="email" placeholder="hello@stackup.sg" required><br>
+		<input type="submit" value="sign up">
+	</form>
 
 </body>
 </html>
