--- a/assignment/elmo_index.html
+++ b/assignment/elmo_index.html
@@ -20,23 +20,35 @@
         <p>
             <img src="Sesame-street-banner.png" alt="" class="img-rounded img-responsive" style="width:200%">
         </p>
-
+        <div class="navbar">
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active">
+                    <a href="elmo_index.html">Home</a>
+                </li>
+                <li role="presentation">
+                    <a href="elmo_about.html">About</a>
+                </li>
+                <li role="presentation">
+                    <a href="elmo_contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
         <!--row 1-->
         <div class="row">
             <div class="col-md-12">
                 <img style="float: right" src="elmo.jpg" alt="logo" class="my-face img-responsive">
                 <div class="">
-                    <h1>Elmo Monster</h1>
-                    <a href="https://en.wikipedia.org/wiki/Elmo">Sesame Street character</a>
+                    <h1><b>Elmo Monster</b></h1>
+                    <a href="https://en.wikipedia.org/wiki/Elmo" target="_blank">Sesame Street character</a>
                     <p>
                         <br>
                         <strong>Elmo</strong> is a Muppet character on the children's television show Sesame Street. He is a furry
                         red monster with a falsetto voice, who hosts the last full fifteen-minute segment (five minutes after
                         2017) on Sesame Street, "Elmo's World", which is aimed at toddlers. He was most often puppeteered
-                        by Kevin Clash. Following Clash's resignation in late 2012, he has been puppeteered by Ryan Dillon.[3][4]
+                        by <em>Kevin Clash</em>. Following Clash's resignation in late 2012, he has been puppeteered by <em>Ryan Dillon</em>.
                     </p>
                     <p>
-                        <a class="btn btn-primary" href="http://google.com" role="button">Learn more</a>
+                        <a href="elmo_about.html" class="btn btn-primary" href="http://google.com" role="button">Learn more</a>
                     </p>
                 </div>
             </div>
@@ -45,8 +57,8 @@
         <div class="row">
             <div class="col-md-12">
                 <p style="font-size: 20px">
-                    <h2>History</h2>
-                    <br>
+                    <h2><b>History</b></h2>
+                    
                     <strong> Elmo </strong> is self-described as three-and-a-half years old and his birthday is on February 3.[5]
                     Elmo characteristically avoids pronouns, referring to himself in the third person (e.g. saying "Elmo
                     wants this" instead of "I want this"). Sesame Street staff writer Nancy Sans once described Elmo's origins:
@@ -68,38 +80,49 @@
             <div class="col-md-6">
 
                 <h3>Elmo fun facts</h3>
+                <div class="table-responsive">
+                    <table class="table table-hover ">
 
-                <table class="table">
-
-                    <tr>
-                        <td><b>First appearance</b></td>
-                        <td>c. 1972 (as Baby Monster) 1981 (in print)[1] November 18, 1985 (as Elmo)</td>
-                    </tr>
-                    <tr>
-                        <td><b>Portrayed by</b></td>
-                        <td>Principal performers
-                            <br> Ryan Dillon (2013–present)
-                            <br> Kevin Clash (1985–2014)</td>
-                    </tr>
-                    <tr>
-                        <td><b>Birthday</b></td>
-                        <td>February 3</td>
-                    </tr>
-                    <tr>
-                        <td><b>Species</b></td>
-                        <td>Sesame Street Muppet Monster</td>
-                    </tr>
-                    <tr>
-                        <td><b>Gender</b></td>
-                        <td>Male</td>
-                    </tr>
-                    <tr>
-                        <td><b>Nationality</b></td>
-                        <td>American</td>
-                    </tr>
-                </table>
-
-
+                        <tr>
+                            <td>
+                                <b>First appearance</b>
+                            </td>
+                            <td>c. 1972 (as Baby Monster) 1981 (in print)[1] November 18, 1985 (as Elmo)</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>Portrayed by</b>
+                            </td>
+                            <td>Principal performers
+                                <br><em>Ryan Dillon (2013–present)</em> 
+                                <br><em>Kevin Clash (1985–2014)</em></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>Birthday</b>
+                            </td>
+                            <td>February 3</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>Species</b>
+                            </td>
+                            <td>Sesame Street Muppet Monster</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>Gender</b>
+                            </td>
+                            <td>Male</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <b>Nationality</b>
+                            </td>
+                            <td>American</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <div class="col-md-6">
                 <h3 class="text-center">Learn the Elmo Song &#33</h3>
@@ -112,22 +135,22 @@
         <div class="text-center" style="font-size: 50px">
             <ul class="list-inline">
                 <li>
-                    <a href="http://facebook.com">
+                    <a href="http://facebook.com" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="http://instagram.com">
+                    <a href="http://instagram.com" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="http://instagram.com">
+                    <a href="http://whatsapp.com" target="_blank">
                         <i class="fa fa-whatsapp" aria-hidden="true"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="http://instagram.com">
+                    <a href="http://linkedin.com" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
