--- a/javascript01.html
+++ b/javascript01.html
@@ -64,6 +64,11 @@
                 count++;
             }
         }
+
+        writeHTML();
+    
+        processNames();
+
     </script>
 </head>
 
