--- a/assignment/elmo_index.html
+++ b/assignment/elmo_index.html
@@ -11,6 +11,12 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.7.0/css/font-awesome.min.css">
 
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="elmo_page.css">
 
 </head>
@@ -38,14 +44,18 @@
             <div class="col-md-12">
                 <img style="float: right" src="elmo.jpg" alt="logo" class="my-face img-responsive">
                 <div class="">
-                    <h1><b>Elmo Monster</b></h1>
+                    <h1>
+                        <b>Elmo Monster</b>
+                    </h1>
                     <a href="https://en.wikipedia.org/wiki/Elmo" target="_blank">Sesame Street character</a>
                     <p>
                         <br>
                         <strong>Elmo</strong> is a Muppet character on the children's television show Sesame Street. He is a furry
                         red monster with a falsetto voice, who hosts the last full fifteen-minute segment (five minutes after
                         2017) on Sesame Street, "Elmo's World", which is aimed at toddlers. He was most often puppeteered
-                        by <em>Kevin Clash</em>. Following Clash's resignation in late 2012, he has been puppeteered by <em>Ryan Dillon</em>.
+                        by
+                        <em>Kevin Clash</em>. Following Clash's resignation in late 2012, he has been puppeteered by
+                        <em>Ryan Dillon</em>.
                     </p>
                     <p>
                         <a href="elmo_about.html" class="btn btn-primary" href="http://google.com" role="button">Learn more</a>
@@ -56,23 +66,30 @@
         <!--row 2-->
         <div class="row">
             <div class="col-md-12">
-                <p style="font-size: 20px">
-                    <h2><b>History</b></h2>
-                    
-                    <strong> Elmo </strong> is self-described as three-and-a-half years old and his birthday is on February 3.[5]
-                    Elmo characteristically avoids pronouns, referring to himself in the third person (e.g. saying "Elmo
-                    wants this" instead of "I want this"). Sesame Street staff writer Nancy Sans once described Elmo's origins:
-                    "There was this extra red puppet lying around and the cast would pick him up sometimes and try to create
-                    a personality, but nothing seemed to materialize."[6] The puppet, originally known as "Baby Monster",
-                    was performed by Caroll Spinney and Jerry Nelson in the background of episodes from the early 1970s,
-                    Brian Muehl from 1979 to 1981, and Richard Hunt from 1981 to 1984. Sans continues that "...one day [in
-                    1984], Kevin Clash, a talented puppeteer, raised him up and brought energy and life into Elmo and from
-                    that day forward we would all write for Elmo. Kevin's performance inspired the writers to develop Elmo's
-                    character".[7] John Tartaglia, Matt Vogel, and Jim Martin have all been secondary performers for the
-                    character, providing movement for Elmo's arms and legs, particularly in green-screen shots. Alongside
-                    Cookie Monster, Elmo has appeared in The Furchester Hotel, where he is taking an extended stay because
-                    of his fascination with the Furchester Hotel. His father Louie is the brother of Funella Furchester.
-                </p>
+                <button class="btn btn-default" data-toggle="collapse" data-target="#history">
+                    <b>Click to learn more on history of Elmo</b>
+                </button>
+                <div id="history" class="collapse out">
+                    <h1>
+                        <b>History</b>
+                    </h1>
+                    <p>
+                        <strong> Elmo </strong> is self-described as three-and-a-half years old and his birthday is on February 3.
+                        Elmo characteristically avoids pronouns, referring to himself in the third person (e.g. saying "Elmo
+                        wants this" instead of "I want this"). Sesame Street staff writer Nancy Sans once described Elmo's
+                        origins: "There was this extra red puppet lying around and the cast would pick him up sometimes and
+                        try to create a personality, but nothing seemed to materialize."The puppet, originally known as "Baby
+                        Monster", was performed by Caroll Spinney and Jerry Nelson in the background of episodes from the
+                        early 1970s, Brian Muehl from 1979 to 1981, and Richard Hunt from 1981 to 1984. Sans continues that
+                        "...one day in 1984, Kevin Clash, a talented puppeteer, raised him up and brought energy and life
+                        into Elmo and from that day forward we would all write for Elmo. Kevin's performance inspired the
+                        writers to develop Elmo's character". John Tartaglia, Matt Vogel, and Jim Martin have all been secondary
+                        performers for the character, providing movement for Elmo's arms and legs, particularly in green-screen
+                        shots. Alongside Cookie Monster, Elmo has appeared in The Furchester Hotel, where he is taking an
+                        extended stay because of his fascination with the Furchester Hotel. His father Louie is the brother
+                        of Funella Furchester.
+                    </p>
+                </div>
             </div>
         </div>
         <!--row 3-->
@@ -94,8 +111,11 @@
                                 <b>Portrayed by</b>
                             </td>
                             <td>Principal performers
-                                <br><em>Ryan Dillon (2013–present)</em> 
-                                <br><em>Kevin Clash (1985–2014)</em></td>
+                                <br>
+                                <em>Ryan Dillon (2013–present)</em>
+                                <br>
+                                <em>Kevin Clash (1985–2014)</em>
+                            </td>
                         </tr>
                         <tr>
                             <td>
