--- a/99 Bottles of Beer/index.html
+++ b/99 Bottles of Beer/index.html
@@ -9,7 +9,9 @@
     
 </head>
 <body>
-    <h1>Lyrics of the song 99 Bottles of Beer</h1>
+    <a href="http://www.99-bottles-of-beer.net/lyrics.html" target="_blank">
+        <h1>Lyrics of the song 99 Bottles of Beer</h1>
+    </a>
     <div id="demo">    
     <script src="index.js"></script>
 </body>
